# otuscpp_07_bulk

./: .travis.yml  CMakeLists.txt  bulk.cpp  bulk.h  executor.cpp  executor.h  interpreter.cpp  interpreter.h  logger.cpp  logger.h  main.cpp  observer.h
interpreter/: braces_handler.cpp  braces_handler.h  cmd_handler.h  interpreter.cpp  interpreter.h  simple_cmd_handler.cpp  simple_cmd_handler.h
observer/: observer.h  subject.h
